<resources>
    <string name="app_name">DroidShot</string>
    <string name="app_desc">Shot on Android</string>
    <string name="app_version">version 1.1.1</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">"  Done  "</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort_by_like">Sort by Popular</string>
    <string name="menu_sort_by_time">Sort by Recent</string>
    <string name="action_cancel">"  Cancel  "</string>
    <string name="action_print">Print</string>
    <string name="title_activity_browse">Vendor List</string>
    <string name="title_activity_browse_model">"Model List : "</string>
    <string name="title_activity_fill_post">Image Upload</string>
    <string name="title_activity_image_viewer">Photo</string>
    <string name="title_activity_placeholder">Placeholder</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_full_screen_image_viewer">      </string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_open_source_licenses">Open Source Licenses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_view">   </string>
    <string name="title_activity_terms_of_service">Terms of Service</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_developer_team">Developer Team</string>
    <string name="title_activity_app_info">Application Info</string>
    <string name="title_activity_help_image_view">   </string>
    <string name="title_activity_device_camera_calibration">Camera Calibration</string>
    <string name="title_activity_update_device_retail_name">Device Update</string>
    <string name="title_activity_model_viewer">   </string>
    <string name="title_activity_profile_viewer">Profile Viewer</string>
    <string name="browser_vendor_title">Choose Smartphone Vendor</string>
    <string name="browse_model_title">Choose Smartphone Model</string>
    <string name="drawer_feed">Feed</string>
    <string name="drawer_event">Event</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_about">About</string>
    <string name="drawer_submenu_label">User</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_evaluate">Evaluate</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_logout_confirm">are you sure ?</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="settings_submenu_account_title">Account</string>
    <string name="settings_editprofile_title">Edit Profile</string>
    <string name="settings_editprofile_summary">update avatar, change profile name/description</string>
    <string name="settings_changepass_title">Change Password</string>
    <string name="settings_changepass_summary">new password must be at least 6 characters</string>
    <string name="settings_submenu_display_title">Display</string>
    <string name="settings_display_eng_location_title">Display English Location</string>
    <string name="settings_display_eng_location_summary">Application will display English location</string>
    <string name="settings_display_local_location_title">Display Localized Location</string>
    <string name="settings_display_local_location_summary">Application will try to display location language according to the actual location</string>
    <string name="settings_submenu_imageupload_title">Image Upload</string>
    <string name="settings_uselocation_title">Use Location by Default</string>
    <string name="settings_uselocation_summary">Attach resolved location to uploaded image by default</string>
    <string name="settings_app_language_title">Select System Language</string>
    <string name="settings_app_language_summary">This will launch android settings for you to change</string>
    <string name="settings_camera_config_title">Add Camera Configuration</string>
    <string name="settings_camera_config_summary">If you got a new camera application you might want to add them here</string>
    <string name="login_username_hint">username or email</string>
    <string name="login_password_hint">password</string>
    <string name="snackbar_login_cannot_connect">cannot connect to server. please check your internet connection.</string>
    <string name="snackbar_login_success">Login success</string>
    <string name="snackbar_login_authen_failed">Login failed, please check you username and password and try again</string>
    <string name="snackbar_login_db_error">Database error, please try again later</string>
    <string name="snackbar_connection_timeout">connection timeout. retry ?</string>
    <string name="snackbar_register_null_required">Please fill every field provided above</string>
    <string name="snackbar_register_email_exist">This email address has already been used</string>
    <string name="snackbar_register_username_exist">This username has already been used</string>
    <string name="snackbar_register_db_error">Database error, please try again later</string>
    <string name="snackbar_register_cannot_save">Data cannot be save into database, please try again later</string>
    <string name="snackbar_register_success">Data cannot be save into database, please try again later</string>
    <string name="snackbar_register_username_toolong">username is too long :( (max 15 characters)</string>
    <string name="snackbar_register_email_invalid">invalid email address</string>
    <string name="snackbar_register_profilename_toolong">profile name is too long :( (max 25 characters)</string>
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_comfirmpassword">confirm password</string>
    <string name="register_email">email address</string>
    <string name="register_disp_name">profile name (can be changed later)</string>
    <string name="register_accept_tos">"By clicking Register, you agree to our "</string>
    <string name="register_accept_tos_link">Terms of Service</string>
    <string name="change_password_old">old password</string>
    <string name="change_password_new">new password</string>
    <string name="change_password_confirm">confirm new password</string>
    <string name="change_password_button_confirm">Confirm</string>
    <string name="change_password_username_label">"username : "</string>
    <string name="snackbar_changepass_mismatch">password mismatch</string>
    <string name="snackbar_changepass_tooshort">password is too short, must be at least 6 characters long</string>
    <string name="snackbar_changepass_tooshort_shortver">password is too short</string>
    <string name="snackbar_changepass_wrongpass">wrong password</string>
    <string name="edit_profile_display_name">profile name</string>
    <string name="edit_profile_description">profile description</string>
    <string name="delete_user_pic_fake_snackbar">Select file to be deleted</string>
    <string name="snackbar_editprofile_profiledesc_toolong">profile description length exceed limit (60)</string>
    <string name="fill_post_caption_hint">Caption</string>
    <string name="fill_post_vendor_hint">Vendor</string>
    <string name="fill_post_model_hint">Model</string>
    <string name="fill_post_vendor_hint_colon">Vendor:</string>
    <string name="fill_post_model_hint_colon">Model:</string>
    <string name="fill_post_checkbox_attach_location">attach current location</string>
    <string name="fill_post_checkbox_accept_tos">Accept terms of service</string>
    <string name="fill_post_checkbox_enhanced">Edited from other app</string>
    <string name="fill_post_button_upload">Upload</string>
    <string name="fill_post_checkbox_use_exif">Use location (from exif)</string>
    <string name="fill_post_checkbox_use_gps">Use location (from location services)</string>
    <string name="fill_post_checkbox_use_location">"Use location "</string>
    <string name="fill_post_checkbox_location_prefix">"Location : "</string>
    <string name="fill_post_checkbox_location_resolving">resolving ...</string>
    <string name="fill_post_checkbox_error_gps_timeout">error: gps is taking too long to respond</string>
    <string name="fill_post_checkbox_location_retry"><![CDATA[\'>retry?</font>]]></string>
    <string name="fill_post_checkbox_error_location_get">error getting location :(</string>
    <string name="fill_post_checkbox_error_location_resolve">error resolving location :(</string>
    <string name="fill_post_checkbox_error_localize_resolve">error resolving localized location :(</string>
    <string name="fill_post_checkbox_error_location_notfound">error no location found</string>
    <string name="fill_post_checkbox_location_off">error: location service must be turned on</string>
    <string name="fill_post_checkbox_no_location_exif">error: no location data in exif :(</string>
    <string name="fill_post_checkbox_gps_working">working .</string>
    <string name="snackbar_fill_post_accept_tos">Please accept our term of service</string>
    <string name="tutorial_string_fam">Create new post</string>
    <string name="tutorial_string_filter">Choose smartphone model</string>
    <string name="tutorial_string_feedtype">Switch between\n Most Popular / Most Recent</string>
    <string name="tutorial_touch_to_dismiss">Touch to dismiss</string>
    <string name="recent_tag">Most Recent</string>
    <string name="popular_tag">Most Popular</string>
    <string name="alert_not_your_photo_title">Not Your Photo</string>
    <string name="alert_not_your_photo_message">Please select a photo taken by this phone</string>
    <string name="alert_not_from_camera_title">Not From Camera</string>
    <string name="alert_not_from_camera_summary">Please select a photo taken by camera</string>
    <string name="alert_no_required_exif_title">Incomplete Photo Data</string>
    <string name="alert_no_required_exif_summary">Selected photo must have every required data</string>
    <string name="alert_invalid_image">Invalid Image</string>
    <string name="alert_invalid_image_message">Selected image has no data.\nPlease select other image</string>
    <string name="snackbar_feed_cannot_refresh">cannot refresh feed</string>
    <string name="snackbar_feed_selected_vendor">"Vendor: "</string>
    <string name="snackbar_feed_selected_model">" Model: "</string>
    <string name="snackbar_feed_upload_failed">upload failed</string>
    <string name="snackbar_feed_upload_cancel">upload canceled</string>
    <string name="fab_label_picture_picker">Choose from gallery</string>
    <string name="fab_label_camera">Take new picture</string>
    <string name="load_feed_error">Error loading feed :(</string>
    <string name="reload_feed_button">RELOAD</string>
    <string name="feed_filter_too_many_tag">Too many tags, Please remove some tag</string>
    <string name="snackbar_exit_confirmation">Press back again to exit</string>
    <string-array name="feed_sort_spinner">
        <item>sort by recent</item>
        <item>sort by like</item>
    </string-array>
    <string name="action_delete_picture">delete picture</string>
    <string name="fake_snackbar_delete_button">DELETE</string>
    <string translatable="false" name="settings_eng_location">english_location_naming</string>
    <string translatable="false" name="settings_local_location">localized_location_naming</string>
    <string translatable="false" name="settings_use_location">use_location_by_default</string>
    <string translatable="false" name="settings_app_language">use_app_language</string>
</resources>