<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Account">

        <PreferenceScreen
            android:title="Edit Profile"
            android:summary="update avatar, change profile name/description">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.droidsans.photo.droidphoto"
                android:targetClass="com.droidsans.photo.droidphoto.PlaceholderActivity"/>

        </PreferenceScreen>

        <PreferenceScreen
            android:title="Change Profile Color Theme"
            android:summary="so your f*cking profile will be a little bit awesome">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.droidsans.photo.droidphoto"
                android:targetClass="com.droidsans.photo.droidphoto.PlaceholderActivity" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="Change Password"
            android:summary="please choose something not too stupid such as passw0rd (or something HackerTeam used)">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.droidsans.photo.droidphoto"
                android:targetClass="com.droidsans.photo.droidphoto.ChangePasswordActivity" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Display">

        <ListPreference
            android:key="@string/settings_app_language"
            android:title="@string/settings_app_language_title"
            android:summary="@string/settings_app_language_summary"
            android:entries="@array/settings_app_language_entrylist"
            android:entryValues="@array/settings_app_language_entryvalue"
            android:defaultValue="en"/>

        <CheckBoxPreference
            android:key="@string/settings_eng_location"
            android:title="Display English Location"
            android:summary="Application will display English location"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/settings_local_location"
            android:title="Display Localized Location"
            android:summary="Application will try to display location language according to the actual location"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Image Upload">

        <CheckBoxPreference
            android:key="@string/settings_use_location"
            android:title="Use Location by Default"
            android:summary="Attach resolved location to uploaded image by default"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>