<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="2"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_add_white_48dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_remove_picture"
        android:title="Remove Picture"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
