<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/item_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.droidsans.photo.droidphoto.ChangePasswordActivity">

        <com.droidsans.photo.droidphoto.util.view.FontTextView
            android:id="@+id/change_password_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/about_text_spacing"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/change_password_username_label"/>

        <EditText
            android:id="@+id/change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_text_spacing"
            android:inputType="textPassword"
            android:hint="@string/change_password_old"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_paragraph_spacing"
            android:inputType="textPassword"
            android:hint="@string/change_password_new"

            android:singleLine="true"/>

        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_text_spacing"
            android:inputType="textPassword"
            android:hint="@string/change_password_confirm"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_paragraph_spacing"
            android:gravity="center">
            <Button
                android:id="@+id/button_confirm"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:background="@drawable/curve_white"
                android:text="@string/change_password_button_confirm"
                android:textColor="@color/gray"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>