<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_list_header"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <ImageView
        android:layout_marginTop="@dimen/about_paragraph_spacing"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/droidshot_logo_300" />

    <com.droidsans.photo.droidphoto.util.view.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/about_text_spacing"
        android:textSize="20sp"
        android:textColor="@color/global_text_black"
        android:text="@string/app_name"/>

    <com.droidsans.photo.droidphoto.util.view.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/global_text_black"
        android:text="@string/app_desc"
        app:customFont="Roboto-Regular.ttf"/>

    <com.droidsans.photo.droidphoto.util.view.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/about_paragraph_spacing"
        android:textSize="14sp"
        android:textColor="@color/global_text_black"
        android:text="@string/app_version"
        app:customFont="Roboto-Regular.ttf"/>

</LinearLayout>